--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <!-- end page -->
 </div>
-  <div class="footer">
+  <!-- <div class="footer">
       <div class="contact">
         <p>Elisabeth Miles</p>
-        <p><a href="mailto:beth.miles@gmail.com">beth.miles@gmail.com.com</a></p>
+        <p><a href="mailto:beth.miles@gmail.com">beth.miles@gmail.com</a></p>
         <p><a href="http://github.com/elisabethmiles/">github.com/elisabethmiles</a></p>
         <p><a href="http://www.linkedin.com/pub/2/3a3/9aa">
 				<img width="160" height="25" border="0" alt="View Elisabeth Miles's profile on LinkedIn" src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.gif" style="position: relative; top: 6px;"/>
 				</a></p>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
