--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,13 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Elisabeth Miles" />
-   <link rel="stylesheet" type="text/css" href="/stylesheets/pretty.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-responsive.css" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="/css/pretty.css" />
+
 </head>
-<body>
+<body class="{{ page.url | classified }} vignette">
 
 <!-- ClickTale Top part -->
 <script type="text/javascript">
@@ -14,12 +18,29 @@ var WRInitTime=(new Date()).getTime();
 </script>
 <!-- ClickTale end of Top part -->
 
-<div class="header">
-  <div class="title">
-    <div>
-      <h1><a href="mailto:beth.miles@gmail.com">Elisabeth Miles</a></h1>
-      <h2> UX Design + Development</h2>  
-    </div> 
-  </div>
+<div class="navbar navbar-fixed-top header">
+	 <div class="navbar-inner">
+		<div class="container">
+	    <a class="brand" href="#" title="Pilotlight Design">&nbsp;</a>
+	    <ul class="nav">
+	      <li class="active"><a href="#">Home</a></li>
+	      <li><a href="#">Link</a></li>
+	      <li><a href="#">Link</a></li>
+	    </ul>
+	  </div>
+	</div>
 </div>
-<div class="page">
+
+<!-- <div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+ 		<div class="container">
+ 			<a href="/" class="brand">Pilotlight Design</a>
+			<div class="nav-collapse">
+				<ul class="nav">
+					<li class="divider-vertical"></li>
+					<li><a href="mailto:beth.miles@gmail.com">Elisabeth Miles</a></li>
+				</ul>
+			</div>
+  	</div>
+  </div>
+ </div> -->
