--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
 				<div class="nav-collapse collapse" style="height: 0px">
 					<ul class="nav">
 						<li class="divider-vertical"></li>
-						<li><a href="mailto:beth.miles@gmail.com">Elisabeth Miles &nbsp;&nbsp; / &nbsp;&nbsp; UX + Visual Design</a></li>										
+						<li><a href="mailto:beth.miles@gmail.com">Elisabeth Miles &nbsp;&nbsp; / &nbsp;&nbsp; UX + Product Design</a></li>										
 					</ul>
 					<ul class="nav pull-right">
 						<li class="pull-right"><a href="mailto:beth.miles@gmail.com">beth.miles@gmail.com</a></li>
