fixing tiny bugs

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,17 @@
 ---
 layout: default
 ---
-<div id="post">
-{{ content }}
+<div id="post" style="padding-top: 40px;">
+	<div class="container">
+  	<div class="row">
+
+			<div class="span2">&nbsp;</div>
+			<div class="span6">
+				<a href="/" >&larr; Back</a>
+				
+				{{ content }}
+				
+			</div>
+  	</div>
+	</div>
 </div>
