--- a/css/pilotlight.css
+++ b/css/pilotlight.css
@@ -1,7 +1,11 @@
-body {
+body{
 	font-family: "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
   height: 100%;
   color: #333;
+}
+
+body.index {
+
   background: url("/img/bg.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
