--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 
 			<div class="span2">&nbsp;</div>
 			<div class="span6">
-				<a href="/" >&larr; Back</a>
+				<a href="/work.html" >&larr; Back</a>
 				
 				{{ content }}
 				
