testing page title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="{{ page.url | classified }} vignette" data-spy="scroll">
+<body class="{{ page.url | classified }}" data-spy="scroll">
 	<div class="navbar navbar-fixed-top header">
 	  <div class="navbar-inner">
 	 		<div class="container">
