--- a/css/pilotlight.css
+++ b/css/pilotlight.css
@@ -6,6 +6,7 @@ body{
   color: #333;
 }
 
+
 body.index {
   background: url("/img/bg.png") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -20,6 +21,10 @@ body.index {
   overflow: hidden;
 	border-top: 1px soli2 #fff;
 	padding-bottom: 50px;
+}
+
+.footer {
+	margin-bottom: 100px;
 }
 
 .navbar-inner {
